--- a/BlazorServerCleanArchitecture.WebUI/Components/Layout/NavMenu.razor
+++ b/BlazorServerCleanArchitecture.WebUI/Components/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div>
+            <NavLink class="nav-link" href="cameras">
+				<span class="bi bi-camera-video-fill-nav-menu" aria-hidden="true"></span> Cameras
+            </NavLink>
+        </div>
     </nav>
 </div>
 
